# picollm

./: .gitignore  README.md  finewebedu_curator.py  gpt2_sanitycheck.ipynb  pyproject.toml  train_gpt2.py
