[project]
name = "picollm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pytest>=9.1.1",
    "tiktoken>=0.13.0",
    "tokenizers>=0.23.1",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=4.17.0",
]
